--- a/chapters.css
+++ b/chapters.css
@@ -2,6 +2,7 @@
 body {
   padding-top: 20px;
   padding-bottom: 20px;
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -12,6 +13,9 @@ body {
   padding-left: 15px;
 }
 
+.jumbotron p {
+  font-weight: normal;
+}
 
 /* Custom page footer */
 .footer {
@@ -45,6 +49,10 @@ body {
 }
 .marketing p + h4 {
   margin-top: 28px;
+}
+
+.marketing h3 {
+  margin-bottom: 20px;
 }
 
 .cover-images img {
